4-10 短信验证码接口开发

--- a/imooc-security/imooc-security-browser/src/main/resources/resources/imooc-signIn.html
+++ b/imooc-security/imooc-security-browser/src/main/resources/resources/imooc-signIn.html
@@ -33,7 +33,7 @@
 		</table>
 	</form>
 	
-	<!--<h3>短信登录</h3>
+	<h3>短信登录</h3>
 	<form action="/authentication/mobile" method="post">
 		<table>
 			<tr>
@@ -52,7 +52,7 @@
 			</tr>
 		</table>
 	</form>
-	<br>
+	<!--<br>
 	<h3>社交登录</h3>
 	<a href="/qqLogin/callback.do">QQ登录</a>
 	&nbsp;&nbsp;&nbsp;&nbsp;
