--- a/imooc-security/imooc-security-browser/src/main/resources/resources/imooc-signIn.html
+++ b/imooc-security/imooc-security-browser/src/main/resources/resources/imooc-signIn.html
@@ -21,7 +21,8 @@
 				<td>图形验证码:</td>
 				<td>
 					<input type="text" name="imageCode">
-					<img src="/code/image?width=200">
+					<img src="/code/image">
+					<!--<img src="/code/image?width=200">-->
 				</td>
 			</tr>
 			<tr>
